Ensure links are visible

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,6 +11,12 @@ body {
 	font-family:system-ui,BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
 
+a {
+	&:hover {
+		text-decoration:underline;
+	}
+}
+
 h1 {
 	font-size:2.25rem;
 	font-weight:800;
